# stac-generator

./: .gitignore  .pdm-python  .pre-commit-config.yaml  404.html  Makefile  README.md  client.py  demo_csv.ipynb  grand_view.json  index.html  load_from_stac_api.ipynb  main.py  mkdocs.yml  mypy.ini  objects.inv  profile  pyproject.toml  read_geopandas.ipynb  test_df.csv  test_point_generator.ipynb
.github/workflows/: analysis-ci.yml  github-actions.yml  test-ci.yml  test_ci.yml  validate-ci.yml
advanced_quick_start/: index.html
case_studies/: index.html
composite/: index.html
docs/: advanced_quick_start.md  case_studies.md  composite.md  driver.md  exception.md  factory.md  generator.md  index.md  introduction.md  metadata.md  misc.md  module.md  point.md  quick_start.md  raster.md  schema.md  setup.md  stac_generator_architecture.md  stac_metadata.md  typing.md  utility.md  utils.md  vector_attributes.md  vector_geometry.md  vector_joined.md  vector_multilayered.md  vector_simple.md
docs/extensions/csv/: generator.md  schema.md  utils.md
docs/extensions/point/: generator.md  schema.md
docs/extensions/raster/: generator.md  schema.md
docs/extensions/vector/: generator.md  schema.md
docs/metadata_examples/: point.md  raster.md  vector.md
driver/: index.html
example/case-study-3/: config.json
example/case-study-5/: config.json
example/configs/: OZBarley_config.json  composite_config.json  point_config.csv  vector_config.json
example/csv/: Adelaide_MonteCristo.csv  Grandview.csv  Polygon_GeoJSON_to_CSV.csv  Sunbury.csv  raster_config.csv  remote_config.csv  source_config.csv  vector_polygon.csv
example/documentation/: vegetation_cover.tif
example/documentation/configs/json/: point_simple_config.json  point_time_series_config.json  raster_custom_config.json  raster_simple_config.json  vector_detailed_config.json  vector_join_config.json  vector_join_date_config.json  vector_layer_config.json  vector_simple_config.json
example/documentation/configs/yaml/: point_simple_config.yaml  point_time_series_config.yaml  raster_custom_config.yaml  raster_simple_config.yaml  vector_detailed_config.yaml  vector_join_config.yaml  vector_join_date_config.yaml  vector_layer_config.yaml  vector_simple_config.yaml
example/geojson/: WaiteOvalTest1.geojson
exception/: index.html
extensions/csv/generator/: index.html
extensions/csv/schema/: index.html
extensions/csv/utils/: index.html
extensions/point/generator/: index.html
extensions/point/schema/: index.html
extensions/raster/generator/: index.html
extensions/raster/schema/: index.html
extensions/vector/generator/: index.html
extensions/vector/schema/: index.html
factory/: index.html
generator/: index.html
introduction/: index.html
metadata/: index.html
metadata_examples/point/: index.html
metadata_examples/raster/: index.html
metadata_examples/vector/: index.html
misc/: index.html
module/: index.html
point/: index.html
quick_start/: index.html
raster/: index.html
schema/: index.html
schemas/: sensor_schema.csv
script/: generate_collection.py  generate_config.py
search/: search_index.json
setup/: index.html
stac_generator/: __init__.py  __main__.py  drone_stac_generator.py  factory.py  generator.py  generator_factory.py  point_stac_generator.py  sensor_stac_generator.py  soilPointDataAllSites_4ML.csv  spatial_helpers.py  types.py  typing.py  vector_polygon_stac_generator.py
stac_generator/base/: driver.py  generator.py  schema.py  utils.py
stac_generator/core/base/: generator.py  schema.py  utils.py
stac_generator/core/point/: generator.py  schema.py
stac_generator/core/raster/: generator.py  schema.py
stac_generator/core/vector/: generator.py  schema.py
stac_generator/csv/: __init__.py  driver.py  generator.py  schema.py  utils.py
stac_generator/geotiff/: generator.py  schema.py
stac_generator/point/: generator.py  schema.py
stac_generator/raster/: __init__.py  generator.py  schema.py
stac_generator/raster_data/: generator.py  schema.py
stac_generator/vector/: generator.py  schema.py
stac_generator/vector_polygon/: generator.py  schema.py
stac_generator_architecture/: index.html
stac_metadata/: index.html
standards/: drone_standard.csv  sensor_standard.csv
tests/: test_factory.py  test_generator.py  test_vector_polygon_stac_generator.py  utils.py
tests/base/: test_utils.py
tests/csv/: test_utils.py
tests/files/: valid_json_config.json
tests/files/integration_tests/composite/config/: composite_config.json
tests/files/integration_tests/point/config/: point_config.json
tests/files/integration_tests/raster/config/: raster_config_no_epsg.json  raster_config_wrong_epsg.json
tests/files/integration_tests/raster/data/: L2A_PVI.tif
tests/files/integration_tests/vector/config/: join_config.csv
tests/files/integration_tests/vector/data/: join_vector.geojson  lga.gpkg  soil_exposure.geojson
tests/files/unit_tests/configs/: invalid_altitude.json  invalid_column_info.json  invalid_date.json  no_date.json  non_default_fields.json  with_altitude.json  with_column_info.json  with_date_no_tzinfo.json  with_date_with_tzinfo.json
tests/files/unit_tests/points/configs/: invalid_asset_location.json  invalid_raster_asset.json
tests/files/unit_tests/vectors/: Werribee.geojson
tests/files/unit_tests/vectors/configs/: invalid_asset_location.json  invalid_geojson.json  invalid_same_id.json  join_invalid_config_empty_join_column_info.json  join_with_date_no_tz.json
tests/point/: test_generator.py  test_unit_tests.py  test_utils.py
tests/raster/: test_generator.py
tests/stac/: catalog.json
tests/stac/test_item_1/: test_item_1.json
tests/test_data/: drone_test.csv  drone_test_files.csv  expected_collection.json  point_test.csv  vector_test.csv  vector_test_files.csv
tests/vector/: test_generator.py  test_unit_tests.py
typing/: index.html
utility/: index.html
utils/: index.html
vector_attributes/: index.html
vector_geometry/: index.html
vector_joined/: index.html
vector_multilayered/: index.html
