[tool.poetry]
name = "stac-generator"
version = "0.1.0"
description = "Generate valid STAC catalogs"
authors = ["Joseph Sclauzero <joseph.sclauzero@adelaide.com.au>"]
readme = "README.md"
repository = "https://github.com/JosephUoA/stac-generator"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pystac = "^1.9.0"
shapely = "^2.0.3"
jsonschema = "^4.21.1"
rasterio = "^1.3.9"
pyproj = "^3.6.1"
folium = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.1.15"
pre-commit = "^3.4.0"
mypy = "^1.8.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"


[tool.poetry.group.odc.dependencies]
psycopg2 = "^2.9.9"
datacube = "^1.8.17"
odc-stac = "^0.3.9"
rioxarray = "^0.15.1"


[tool.poetry.group.api.dependencies]
stac-fastapi-api = "^2.4.9"
stac-fastapi-types = "^2.4.9"
stac-fastapi-extensions = "^2.4.9"
uvicorn = "^0.27.1"
pypgstac = "^0.8.4"



[tool.pdm.dev-dependencies]
type-check = [
    "pydantic>=2.9.2",
    "pydantic-extra-types>=2.9.0",
]
analysis = [
    "pandas-stubs>=2.2.2.240909",
]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "@(abc\\.)?abstractmethod",
    "def __getattr__",
    "if TYPE_CHECKING:"
]

[tool.ruff]
line-length = 100
src = ["stac_generator"]
target-version = "py311"
[project]
authors = [
    {name = "Joseph Sclauzero", email = "joseph.sclauzero@adelaide.com.au"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "pystac<2.0.0,>=1.9.0",
    "shapely<3.0.0,>=2.0.3",
    "jsonschema<5.0.0,>=4.21.1",
    "rasterio<2.0.0,>=1.3.9",
    "pyproj>=3.6.1",
    "folium<1.0.0,>=0.17.0",
    "geopandas>=1.0.1",
]
name = "stac-generator"
version = "0.1.0"
description = "Generate valid STAC catalogs"
readme = "README.md"

[project.urls]
repository = "https://github.com/JosephUoA/stac-generator"
